# RayTracer

./: CMakeLists.txt
include/: camera.hpp  color_utils.hpp  common.hpp  hit_result.hpp  light_source.hpp  material.hpp  math_utils.hpp  ostream_interface.hpp  plane.hpp  ray.hpp  scene.hpp  shading.hpp  shape.hpp  sphere.hpp
src/: CMakeLists.txt  camera.cpp  diffuse_shading.cpp  flat_shading.cpp  main.cpp  plane.cpp  scene.cpp  sphere.cpp
